--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="text_quiz_about_start">Le quiz va commencer !</string>
     <string name="validation_email">Email invalide</string>
     <string name="label_save">Sauvegarde...</string>
+    <string name="dialog_quiz_loading">Loading quiz...</string>
 </resources>
