--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="validation_email">Email invalide</string>
     <string name="label_save">Sauvegarde...</string>
     <string name="dialog_quiz_loading">Loading quiz...</string>
+    <string name="title_quiz">Xebia Quiz</string>
 </resources>
